etc/libanoncreds.h

typedef size_t ErrorCode;

/**
 * ByteBuffer is a struct that represents an array of bytes to be sent over the FFI boundaries.
 * There are several cases when you might want to use this, but the primary one for us
 * is for returning protobuf-encoded data to Swift and Java. The type is currently rather
 * limited (implementing almost no functionality), however in the future it may be
 * more expanded.
 *
 * ## Caveats
 *
 * Note that the order of the fields is `len` (an i64) then `data` (a `*mut u8`), getting
 * this wrong on the other side of the FFI will cause memory corruption and crashes.
 * `i64` is used for the length instead of `u64` and `usize` because JNA has interop
 * issues with both these types.
 *
 * ### `Drop` is not implemented
 *
 * ByteBuffer does not implement Drop. This is intentional. Memory passed into it will
 * be leaked if it is not explicitly destroyed by calling [`ByteBuffer::destroy`], or
 * [`ByteBuffer::destroy_into_vec`]. This is for two reasons:
 *
 * 1. In the future, we may allow it to be used for data that is not managed by
 *    the Rust allocator\*, and `ByteBuffer` assuming it's okay to automatically
 *    deallocate this data with the Rust allocator.
 *
 * 2. Automatically running destructors in unsafe code is a
 *    [frequent footgun](https://without.boats/blog/two-memory-bugs-from-ringbahn/)
 *    (among many similar issues across many crates).
 *
 * Note that calling `destroy` manually is often not needed, as usually you should
 * be passing these to the function defined by [`define_bytebuffer_destructor!`] from
 * the other side of the FFI.
 *
 * Because this type is essentially *only* useful in unsafe or FFI code (and because
 * the most common usage pattern does not require manually managing the memory), it
 * does not implement `Drop`.
 *
 * \* Note: in the case of multiple Rust shared libraries loaded at the same time,
 * there may be multiple instances of "the Rust allocator" (one per shared library),
 * in which case we're referring to whichever instance is active for the code using
 * the `ByteBuffer`. Note that this doesn't occur on all platforms or build
 * configurations, but treating allocators in different shared libraries as fully
 * independent is always safe.
 *
 * ## Layout/fields
 *
 * This struct's field are not `pub` (mostly so that we can soundly implement `Send`, but also so
 * that we can verify rust users are constructing them appropriately), the fields, their types, and
 * their order are *very much* a part of the public API of this type. Consumers on the other side
 * of the FFI will need to know its layout.
 *
 * If this were a C struct, it would look like
 *
 * ```c,no_run
 * struct ByteBuffer {
 *     // Note: This should never be negative, but values above
 *     // INT64_MAX / i64::MAX are not allowed.
 *     int64_t len;
 *     // Note: nullable!
 *     uint8_t *data;
 * };
 * ```
 *
 * In rust, there are two fields, in this order: `len: i64`, and `data: *mut u8`.
 *
 * For clarity, the fact that the data pointer is nullable means that `Option<ByteBuffer>` is not
 * the same size as ByteBuffer, and additionally is not FFI-safe (the latter point is not
 * currently guaranteed anyway as of the time of writing this comment).
 *
 * ### Description of fields
 *
 * `data` is a pointer to an array of `len` bytes. Note that data can be a null pointer and therefore
 * should be checked.
 *
 * The bytes array is allocated on the heap and must be freed on it as well. Critically, if there
 * are multiple rust shared libraries using being used in the same application, it *must be freed
 * on the same heap that allocated it*, or you will corrupt both heaps.
 *
 * Typically, this object is managed on the other side of the FFI (on the "FFI consumer"), which
 * means you must expose a function to release the resources of `data` which can be done easily
 * using the [`define_bytebuffer_destructor!`] macro provided by this crate.
 */
typedef struct ByteBuffer {
  int64_t len;
  uint8_t *data;
} ByteBuffer;


typedef size_t ObjectHandle;


/**
 * `FfiStr<'a>` is a safe (`#[repr(transparent)]`) wrapper around a
 * nul-terminated `*const c_char` (e.g. a C string). Conceptually, it is
 * similar to [`std::ffi::CStr`], except that it may be used in the signatures
 * of extern "C" functions.
 *
 * Functions accepting strings should use this instead of accepting a C string
 * directly. This allows us to write those functions using safe code without
 * allowing safe Rust to cause memory unsafety.
 *
 * A single function for constructing these from Rust ([`FfiStr::from_raw`])
 * has been provided. Most of the time, this should not be necessary, and users
 * should accept `FfiStr` in the parameter list directly.
 *
 * ## Caveats
 *
 * An effort has been made to make this struct hard to misuse, however it is
 * still possible, if the `'static` lifetime is manually specified in the
 * struct. E.g.
 *
 * ```rust,no_run
 * # use ffi_support::FfiStr;
 * // NEVER DO THIS
 * #[no_mangle]
 * extern "C" fn never_do_this(s: FfiStr<'static>) {
 *     // save `s` somewhere, and access it after this
 *     // function returns.
 * }
 * ```
 *
 * Instead, one of the following patterns should be used:
 *
 * ```
 * # use ffi_support::FfiStr;
 * #[no_mangle]
 * extern "C" fn valid_use_1(s: FfiStr<'_>) {
 *     // Use of `s` after this function returns is impossible
 * }
 * // Alternative:
 * #[no_mangle]
 * extern "C" fn valid_use_2(s: FfiStr) {
 *     // Use of `s` after this function returns is impossible
 * }
 * ```
 */
typedef const char *FfiStr;


typedef struct FfiList_FfiStr {
  size_t count;
  const FfiStr *data;
} FfiList_FfiStr;


typedef struct FfiList_FfiStr FfiStrList;


typedef struct FfiList_ObjectHandle {
  size_t count;
  const ObjectHandle *data;
} FfiList_ObjectHandle;


typedef struct FfiList_i32 {
  size_t count;
  const int32_t *data;
} FfiList_i32;


typedef struct FfiList_FfiNonrevokedIntervalOverride {
  size_t count;
  const struct FfiNonrevokedIntervalOverride *data;
} FfiList_FfiNonrevokedIntervalOverride;


ErrorCode anoncreds_object_get_json(ObjectHandle handle, struct ByteBuffer *result_p);


ErrorCode anoncreds_object_get_type_name(ObjectHandle handle, const char **result_p);


ErrorCode anoncreds_presentation_from_json(struct ByteBuffer json, ObjectHandle *result_p);


ErrorCode anoncreds_presentation_request_from_json(struct ByteBuffer json, ObjectHandle *result_p);


ErrorCode anoncreds_process_credential(ObjectHandle cred,
                                       ObjectHandle cred_req_metadata,
                                       FfiStr link_secret,
                                       ObjectHandle cred_def,
                                       ObjectHandle rev_reg_def,
                                       ObjectHandle *cred_p);


/**
 * Process an incoming W3C credential received from the issuer.
 *
 * # Params
 * cred:                  object handle pointing to the credential in W3C form
 * cred_req_metadata:     object handle pointing to the credential request metadata
 * link_secret:           holder link secret
 * cred_def:              object handle pointing to the credential definition
 * rev_reg_def:           object handle pointing to the revocation registry definition
 * cred_p:                reference that will contain credential (in W3C form) instance pointer
 *
 * # Returns
 * Error code
 */
ErrorCode anoncreds_process_w3c_credential(ObjectHandle cred,
                                           ObjectHandle cred_req_metadata,
                                           FfiStr link_secret,
                                           ObjectHandle cred_def,
                                           ObjectHandle rev_reg_def,
                                           ObjectHandle *cred_p);


ErrorCode anoncreds_revocation_registry_definition_from_json(struct ByteBuffer json,
                                                             ObjectHandle *result_p);


ErrorCode anoncreds_revocation_registry_definition_get_attribute(ObjectHandle handle,
                                                                 FfiStr name,
                                                                 const char **result_p);


ErrorCode anoncreds_revocation_registry_definition_private_from_json(struct ByteBuffer json,
                                                                     ObjectHandle *result_p);


ErrorCode anoncreds_revocation_registry_from_json(struct ByteBuffer json, ObjectHandle *result_p);


ErrorCode anoncreds_revocation_state_from_json(struct ByteBuffer json, ObjectHandle *result_p);


ErrorCode anoncreds_revocation_status_list_from_json(struct ByteBuffer json,
                                                     ObjectHandle *result_p);


ErrorCode anoncreds_schema_from_json(struct ByteBuffer json, ObjectHandle *result_p);


ErrorCode anoncreds_set_default_logger(void);


/**
 * Public destructor for strings managed by the other side of the FFI.
 *
 * # Safety
 *
 * This will free the string pointer it gets passed in as an argument,
 * and thus can be wildly unsafe if misused.
 *
 * See the documentation of `ffi_support::destroy_c_string` and
 * `ffi_support::define_string_destructor!` for further info.
 */
void anoncreds_string_free(char *s);


ErrorCode anoncreds_update_revocation_status_list(ObjectHandle cred_def,
                                                  ObjectHandle rev_reg_def,
                                                  ObjectHandle rev_reg_priv,
                                                  ObjectHandle rev_current_list,
                                                  struct FfiList_i32 issued,
                                                  struct FfiList_i32 revoked,
                                                  int64_t timestamp,
                                                  ObjectHandle *new_rev_status_list_p);


ErrorCode anoncreds_update_revocation_status_list_timestamp_only(int64_t timestamp,
                                                                 ObjectHandle rev_current_list,
                                                                 ObjectHandle *rev_status_list_p);


ErrorCode anoncreds_verify_presentation(ObjectHandle presentation,
                                        ObjectHandle pres_req,
                                        struct FfiList_ObjectHandle schemas,
                                        FfiStrList schema_ids,
                                        struct FfiList_ObjectHandle cred_defs,
                                        FfiStrList cred_def_ids,
                                        struct FfiList_ObjectHandle rev_reg_defs,
                                        FfiStrList rev_reg_def_ids,
                                        struct FfiList_ObjectHandle rev_status_list,
                                        struct FfiList_FfiNonrevokedIntervalOverride nonrevoked_interval_override,
                                        int8_t *result_p);


/**
 * Verity W3C styled Presentation
 *
 * # Params
 * presentation:                   object handle pointing to presentation
 * pres_req:                       object handle pointing to presentation request
 * schemas:                        list of credential schemas
 * schema_ids:                     list of schemas ids
 * cred_defs:                      list of credential definitions
 * cred_def_ids:                   list of credential definitions ids
 * rev_reg_defs:                   list of revocation definitions
 * rev_reg_def_ids:                list of revocation definitions ids
 * rev_status_list:                revocation status list
 * nonrevoked_interval_override:   not-revoked interval
 * result_p:                       reference that will contain presentation verification result.
 *
 * # Returns
 * Error code
 */
ErrorCode anoncreds_verify_w3c_presentation(ObjectHandle presentation,
                                            ObjectHandle pres_req,
                                            struct FfiList_ObjectHandle schemas,
                                            FfiStrList schema_ids,
                                            struct FfiList_ObjectHandle cred_defs,
                                            FfiStrList cred_def_ids,
                                            struct FfiList_ObjectHandle rev_reg_defs,
                                            FfiStrList rev_reg_def_ids,
                                            struct FfiList_ObjectHandle rev_status_list,
                                            struct FfiList_FfiNonrevokedIntervalOverride nonrevoked_interval_override,
                                            int8_t *result_p);


ErrorCode anoncreds_w3c_credential_from_json(struct ByteBuffer json, ObjectHandle *result_p);


/**
 * Get credential signature information required for proof building and verification
 * This information is aggregated from `anoncredsvc-2023` and `anoncredspresvc-2023` proofs.
 * It's needed for Holder and Verifier for public entities resolving
 *     {`schema_id`, `cred_def_id`, `rev_reg_id`, `rev_reg_index`, `timestamp`}
 *
 * # Params
 * handle:                object handle pointing to the credential (in W3 form)
 * cred_proof_info_p:     reference that will contain credential information
 *
 * # Returns
 * Error code
 */
ErrorCode anoncreds_w3c_credential_get_integrity_proof_details(ObjectHandle handle,
                                                               ObjectHandle *cred_proof_info_p);


ErrorCode anoncreds_w3c_credential_proof_get_attribute(ObjectHandle handle,
                                                       FfiStr name,
                                                       const char **result_p);


ErrorCode anoncreds_w3c_presentation_from_json(struct ByteBuffer json, ObjectHandle *result_p);