lib/anoncreds/bindings/anoncreds_native_functions.dart


final int Function(
  int handle,
  Pointer<FfiByteBuffer> result_p,
) nativeAnoncredsObjectGetJson = nativeLib
    .lookup<NativeFunction<Int32 Function(Int64, Pointer<FfiByteBuffer>)>>(
        'anoncreds_object_get_json')
    .asFunction();

final int Function(
  int handle,
  Pointer<Pointer<Utf8>> result_p,
) nativeAnoncredsObjectGetTypeName = nativeLib
    .lookup<NativeFunction<Int32 Function(Int64, Pointer<Pointer<Utf8>>)>>(
        'anoncreds_object_get_type_name')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsPresentationFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_presentation_from_json')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsPresentationRequestFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_presentation_request_from_json')
    .asFunction();

final int Function(
  int cred,
  int cred_req_metadata,
  Pointer<Utf8> link_secret,
  int cred_def,
  int rev_reg_def,
  Pointer<Int64> cred_p,
) nativeAnoncredsProcessCredential = nativeLib
    .lookup<
        NativeFunction<
            Int32 Function(Int64, Int64, Pointer<Utf8>, Int64, Int64,
                Pointer<Int64>)>>('anoncreds_process_credential')
    .asFunction();

final int Function(
  int cred,
  int cred_req_metadata,
  Pointer<Utf8> link_secret,
  int cred_def,
  int rev_reg_def,
  Pointer<Int64> cred_p,
) nativeAnoncredsProcessW3cCredential = nativeLib
    .lookup<
        NativeFunction<
            Int32 Function(Int64, Int64, Pointer<Utf8>, Int64, Int64,
                Pointer<Int64>)>>('anoncreds_process_w3c_credential')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsRevocationRegistryDefinitionFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_revocation_registry_definition_from_json')
    .asFunction();

final int Function(
  int handle,
  Pointer<Utf8> name,
  Pointer<Pointer<Utf8>> result_p,
) nativeAnoncredsRevocationRegistryDefinitionGetAttribute = nativeLib
    .lookup<NativeFunction<Int32 Function(Int64, Pointer<Utf8>, Pointer<Pointer<Utf8>>)>>(
        'anoncreds_revocation_registry_definition_get_attribute')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsRevocationRegistryDefinitionPrivateFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_revocation_registry_definition_private_from_json')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsRevocationRegistryFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_revocation_registry_from_json')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsRevocationStateFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_revocation_state_from_json')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsRevocationStatusListFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_revocation_status_list_from_json')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsSchemaFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_schema_from_json')
    .asFunction();

final int Function() nativeAnoncredsSetDefaultLogger = nativeLib
    .lookup<NativeFunction<Int32 Function()>>('anoncreds_set_default_logger')
    .asFunction();

final void Function(
  Pointer<Utf8> s,
) nativeAnoncredsStringFree = nativeLib
    .lookup<NativeFunction<Void Function(Pointer<Utf8>)>>('anoncreds_string_free')
    .asFunction();

final int Function(
  int cred_def,
  int rev_reg_def,
  int rev_reg_priv,
  int rev_current_list,
  Pointer<FfiListi32> issued,
  Pointer<FfiListi32> revoked,
  int timestamp,
  Pointer<Int64> new_rev_status_list_p,
) nativeAnoncredsUpdateRevocationStatusList = nativeLib
    .lookup<
        NativeFunction<
            Int32 Function(
                Int64,
                Int64,
                Int64,
                Int64,
                Pointer<FfiListi32>,
                Pointer<FfiListi32>,
                Int64,
                Pointer<Int64>)>>('anoncreds_update_revocation_status_list')
    .asFunction();

final int Function(
  int timestamp,
  int rev_current_list,
  Pointer<Int64> rev_status_list_p,
) nativeAnoncredsUpdateRevocationStatusListTimestampOnly = nativeLib
    .lookup<NativeFunction<Int32 Function(Int64, Int64, Pointer<Int64>)>>(
        'anoncreds_update_revocation_status_list_timestamp_only')
    .asFunction();

final int Function(
  int presentation,
  int pres_req,
  Pointer<FfiListObjectHandle> schemas,
  Pointer<FfiStrList> schema_ids,
  Pointer<FfiListObjectHandle> cred_defs,
  Pointer<FfiStrList> cred_def_ids,
  Pointer<FfiListObjectHandle> rev_reg_defs,
  Pointer<FfiStrList> rev_reg_def_ids,
  Pointer<FfiListObjectHandle> rev_status_list,
  Pointer<FfiListFfiNonrevokedIntervalOverride> nonrevoked_interval_override,
  Pointer<Int8> result_p,
) nativeAnoncredsVerifyPresentation = nativeLib
    .lookup<
        NativeFunction<
            Int32 Function(
                Int64,
                Int64,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiStrList>,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiStrList>,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiStrList>,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiListFfiNonrevokedIntervalOverride>,
                Pointer<Int8>)>>('anoncreds_verify_presentation')
    .asFunction();

final int Function(
  int presentation,
  int pres_req,
  Pointer<FfiListObjectHandle> schemas,
  Pointer<FfiStrList> schema_ids,
  Pointer<FfiListObjectHandle> cred_defs,
  Pointer<FfiStrList> cred_def_ids,
  Pointer<FfiListObjectHandle> rev_reg_defs,
  Pointer<FfiStrList> rev_reg_def_ids,
  Pointer<FfiListObjectHandle> rev_status_list,
  Pointer<FfiListFfiNonrevokedIntervalOverride> nonrevoked_interval_override,
  Pointer<Int8> result_p,
) nativeAnoncredsVerifyW3cPresentation = nativeLib
    .lookup<
        NativeFunction<
            Int32 Function(
                Int64,
                Int64,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiStrList>,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiStrList>,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiStrList>,
                Pointer<FfiListObjectHandle>,
                Pointer<FfiListFfiNonrevokedIntervalOverride>,
                Pointer<Int8>)>>('anoncreds_verify_w3c_presentation')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsW3cCredentialFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_w3c_credential_from_json')
    .asFunction();

final int Function(
  int handle,
  Pointer<Int64> cred_proof_info_p,
) nativeAnoncredsW3cCredentialGetIntegrityProofDetails = nativeLib
    .lookup<NativeFunction<Int32 Function(Int64, Pointer<Int64>)>>(
        'anoncreds_w3c_credential_get_integrity_proof_details')
    .asFunction();

final int Function(
  int handle,
  Pointer<Utf8> name,
  Pointer<Pointer<Utf8>> result_p,
) nativeAnoncredsW3cCredentialProofGetAttribute = nativeLib
    .lookup<NativeFunction<Int32 Function(Int64, Pointer<Utf8>, Pointer<Pointer<Utf8>>)>>(
        'anoncreds_w3c_credential_proof_get_attribute')
    .asFunction();

final int Function(
  FfiByteBuffer json,
  Pointer<Int64> result_p,
) nativeAnoncredsW3cPresentationFromJson = nativeLib
    .lookup<NativeFunction<Int32 Function(FfiByteBuffer, Pointer<Int64>)>>(
        'anoncreds_w3c_presentation_from_json')
    .asFunction();
